WWUZEN-20 #fixed an issue with the h2 in the footer being invisible

--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -287,6 +287,10 @@ h2 {
   padding: 5px 10px;
 }
 
+#footer-wrapper h2.block-title {
+  color: #fff;
+}
+
 h3 {
   font-size: $h3-font-size;
   color: $wwuBlue;
